refactor(service): centralize current user lookup via SecurityContextService